# black-stela

./: .gitignore  AGENTS.md  AIPlan.md  Art.md  CLAUDE.md  CombatPlan.md  DevLoop.md  Improve.md  Plan.md  Pointing.md  README.md  Tasks.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: architecture.md  combat-command-ui-plan.md  desktop-productization.md  drpg-design-pillars.md  dungeon-patterns.md  release-checklist.md  windows-build.md
godot/: README.md  export_presets.cfg  project.godot
scripts/: combat-probes.ts  content-sim.ts  coverage-sim.ts  derive-ux-requirements.mjs  export-build-stamp.mjs  export-character-data.ts  export-character-samples.ts  export-combat-helper-samples.ts  export-engine-data.ts  export-i18n.ts  export-packs.ts  export-rng-samples.ts  export-save-fixtures.ts  export-stat-samples.ts  export-traces.ts  genFloorMaze.mjs  genVerdantFloors.mjs  headless-clear.ts  headless-probes.ts  placeFloor.mjs  run-vite-module.mjs  stage-godot-assets.mjs  tuneEnemies.mjs
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: activeWorld.test.ts  adventurerVault.test.ts  affixEffects.test.ts  affixes.test.ts  aiPolicyGuard.test.ts  aiSettings.test.ts  aptitudeCombatEffects.test.ts  artAssets.test.ts  b1fStructure.test.ts  bestiary.test.ts  characterCreation.test.ts  characterVisualProfile.test.ts  chests.test.ts  classCapabilities.test.ts  economy.test.ts  (+87 more)
(+527 files in other folders)
