[package]
name = "black-stela"
version = "0.1.0"
description = "Black Stela MVP"
authors = ["Black Stela contributors"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "black-stela"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[lib]
name = "black_stela_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
